==> 54buhtig/stm32/22_2esp8266_OneNet_control/Hardware/usart.c <==
#include "sys.h"
#include "usart.h"
//////////////////////////////////////////////////////////////////////////////////
// 如果使用ucos,则包括下面的头文件即可.
#if SYSTEM_SUPPORT_OS
#include "includes.h" //ucos 使用
#endif
//////////////////////////////////////////////////////////////////////////////////
// 本程序只供学习使用，未经作者许可，不得用于其它任何用途
// ALIENTEK STM32开发板
// 串口1初始化
// 正点原子@ALIENTEK
// 技术论坛:www.openedv.com
// 修改日期:2012/8/18
// 版本：V1.5
// 版权所有，盗版必究。
// Copyright(C) 广州市星翼电子科技有限公司 2009-2019
// All rights reserved
//********************************************************************************
// V1.3修改说明
// 支持适应不同频率下的串口波特率设置.
// 加入了对printf的支持
// 增加了串口接收命令功能.
// 修正了printf第一个字符丢失的bug
// V1.4修改说明
// 1,修改串口初始化IO的bug
// 2,修改了USART_RX_STA,使得串口最大接收字节数为2的14次方
// 3,增加了USART_REC_LEN,用于定义串口最大允许接收的字节数(不大于2的14次方)
// 4,修改了EN_USART1_RX的使能方式
// V1.5修改说明
// 1,增加了对UCOSII的支持
//////////////////////////////////////////////////////////////////////////////////

//////////////////////////////////////////////////////////////////
// 加入以下代码,支持printf函数,而不需要选择use MicroLIB
#if 1
#pragma import(__use_no_semihosting)
// 标准库需要的支持函数
struct __FILE
{
	int handle;
};

FILE __stdout;
// 定义_sys_exit()以避免使用半主机模式
void _sys_exit(int x)
{
	x = x;
}
// 重定义fputc函数
int fputc(int ch, FILE *f)
{
	while ((USART2->SR & 0X40) == 0)
		; // 循环发送,直到发送完毕
	USART2->DR = (u8)ch;
	return ch;
}
#endif

#if EN_USART1_RX // 如果使能了接收
// 串口1中断服务程序
// 注意,读取USARTx->SR能避免莫名其妙的错误
u8 USART_RX_BUF[USART_REC_LEN]; // 接收缓冲,最大USART_REC_LEN个字节.
// 接收状态
// bit15，	接收完成标志
// bit14，	接收到0x0d
// bit13~0，	接收到的有效字节数目
u16 USART_RX_STA = 0; // 接收状态标记

void uart_init(u32 bound)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	USART_InitTypeDef USART_InitStructure;
	NVIC_InitTypeDef NVIC_InitStructure;

	/*使能USART2外设时钟*/
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART2, ENABLE);
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
	/*复位串口2*/
	//	USART_DeInit(USART2);

	/*USART2_GPIO初始化设置*/
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_2;		  // USART2_TXD(PA.2)
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;	  // 复用推挽输出
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; // 设置引脚输出最大速率为50MHz
	GPIO_Init(GPIOA, &GPIO_InitStructure);			  // 调用库函数中的GPIO初始化函数，初始化USART1_TXD(PA.9)

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;			  // USART2_RXD(PA.3)
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING; // 浮空输入
	GPIO_Init(GPIOA, &GPIO_InitStructure);				  // 调用库函数中的GPIO初始化函数，初始化USART1_RXD(PA.10)

	/*USART2 初始化设置*/
	USART_InitStructure.USART_BaudRate = bound;										// 设置波特率
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;						// 8位数据格式
	USART_InitStructure.USART_StopBits = USART_StopBits_1;							// 1个停止位
	USART_InitStructure.USART_Parity = USART_Parity_No;								// 无奇偶校验位
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None; // 无硬件数据流控制
	USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;					// 工作模式设置为收发模式
	USART_Init(USART2, &USART_InitStructure);										// 初始化串口2

	/*Usart1 NVIC配置*/
	NVIC_InitStructure.NVIC_IRQChannel = USART2_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1; // 抢占优先级1
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;		  // 从优先级0
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;			  // IRQ通道使能
	NVIC_Init(&NVIC_InitStructure);							  // 根据指定的参数初始化VIC寄存器

	USART_ITConfig(USART2, USART_IT_RXNE, ENABLE); // 使能串口2接收中断

	USART_Cmd(USART2, ENABLE);				// 使能串口
	USART_ClearFlag(USART2, USART_FLAG_TC); // 清除发送完成标志
}

void USART2_IRQHandler(void) // 串口2中断服务程序
{
	int i = 0;
	if (USART_GetITStatus(USART2, USART_IT_RXNE) != RESET) // 检查接收中断标志
	{
		u8 Res = USART_ReceiveData(USART2); // 读取接收到的数据

		// 如果没有接收完毕
		if ((USART_RX_STA & 0x8000) == 0)
		{
			// 检查缓冲区是否已满
			if (USART_RX_STA < (80 - 1))
			{
				USART_RX_BUF[USART_RX_STA] = Res; // 将接收到的数据存储在缓冲区中
				USART_RX_STA++;					  // 增加接收状态计数器

				// 检查是否接收到结束字符（例如换行符 '\n'）
				if (Res == '\n')
				{
					i++;
					if(i == 2)
					{
						USART_RX_STA |= 0x8000; // 设置接收完成标志
					}						
				}
			}
			else
			{
				// 缓冲区溢出，重置状态
				USART_RX_STA = 0;
			}
		}
		// 清除接收中断标志，以避免重复进入中断
		USART_ClearITPendingBit(USART2, USART_IT_RXNE);
	}
}

#endif
